--- a/index.html
+++ b/index.html
@@ -391,6 +391,15 @@
     </div>
     <div class="docs-grid">
 
+      <a class="doc-row" href="https://drive.google.com/drive/u/0/folders/0B14l9boNQKlwdTctZmsyWDN1ckE?resourcekey=0-fL_0nDNMI6NsNEIBmlM9Ww" target="_blank" rel="noopener">
+        <div class="doc-icon">🏖️</div>
+        <div class="doc-info">
+          <div class="doc-name">Leave of Absence Forms</div>
+          <div class="doc-meta">Google Drive Folder</div>
+        </div>
+        <span class="doc-arrow">→</span>
+      </a>
+
       <a class="doc-row" href="https://docs.google.com/document/d/1wiFmX0_fEqYTgfz0iv7J5_Qn8iF3dVN4Y_VQmVqOhGk/copy" target="_blank" rel="noopener">
         <div class="doc-icon">📋</div>
         <div class="doc-info">
@@ -434,7 +443,7 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>ASD English Department · American School of Dhahran · <a href="library/">Englsih Department Hub</a></p>
+  <p>ASD English Department · American School of Dhahran · <a href="library/">Department Library</a></p>
 </footer>
 
 <script>
